gccida/g0/expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_va_arg/src/builtins.c:3515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valista; // [rsp+8h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_va_arg/src/builtins.c:3571:7: error: use of undeclared identifier 'gave_help_3'
if ( !gave_help_3 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_va_arg/src/builtins.c:3573:1: error: use of undeclared identifier 'gave_help_3'
gave_help_3 = 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_va_arg/src/builtins.c:3579:25: error: use of undeclared identifier 'machine_mode'
result = gen_rtx_MEM( ( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), addr); 
                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_va_arg/src/obj/builtins.o] Error 1
